[project]
name = "openretcon"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "msgspec>=0.20.0",
]

[project.optional-dependencies]
cli = ["typer>=0.24.0"]
py = ["saronia"]

[project.scripts]
retcon = "retcon.cli:main"

[tool.pyright]
exclude = [
  ".venv",
  ".idea",
  ".ruff_cache",
  ".pytest_cache",
  "docs",
  "local",
]
typeCheckingMode = "basic"
pythonPlatform = "All"
pythonVersion = "3.14"
reportMissingImports = true
reportMissingTypeStubs = false
reportSelfClsParameterName = false
